# crc-ner

./: .gitignore  12_21_port_issue_log.txt  Dockerfile  README.md  docker-compose.yml  pom.xml
bta_then_event_no_attrsubpipe/anafora/: test1.EventTime.ctakes.completed.xml  test2.EventTime.ctakes.completed.xml
bta_then_event_no_attrsubpipe/event_txt/: test1_chemo_mentions.txt  test2_chemo_mentions.txt
bta_then_event_no_attrsubpipe/timex_txt/: test1_time_mentions.txt  test2_time_mentions.txt
bta_then_event_pipeline/anafora/: test1.EventTime.ctakes.completed.xml  test2.EventTime.ctakes.completed.xml
bta_then_event_pipeline/event_txt/: test1_chemo_mentions.txt
bta_then_event_pipeline/timex_txt/: test1_time_mentions.txt  test2_time_mentions.txt
bta_then_just_postagger/anafora/: test1.EventTime.ctakes.completed.xml  test2.EventTime.ctakes.completed.xml
ctakes-timelines/: pom.xml
drivers/: pom.xml
instance-generator/: pom.xml
timelines/: clear_run_debug.sh  gold_debug_clear_run.sh  gold_debug_just_run.sh  just_run.sh  pom.xml  run.sh
timelines/instance-generator/: pom.xml
timelines/instance-generator/src/user/resources/org/apache/ctakes/timelines/timelines_py/: pyproject.toml  setup.cfg
timelines/instance-generator/src/user/resources/org/apache/ctakes/timelines/timelines_py/src/timelines/: timeline_delegator.py  timelines_pipeline.py
timelines/instance-generator/src/user/resources/org/apache/ctakes/timelines/timelines_py/src/timelines/ae/: conmod_rest.py  timeline_delegator.py  tlink_rest.py
timenorm/: pom.xml
tweaked-timenorm/: pom.xml
(+149 files in other folders)
