[metadata]
name = timelines
version = 5.0.0
author = BCH Health NLP Lab
author_email = eli.goldner@childrens.harvard.edu
description = Python Annotators for Treatment Timlines DeepPhe Project
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
package_dir=
    = src
packages = find:
python_requires = >=3.10
install_requires =
    ctakes_pbj~=5.0.0
    cnlp-transformers~=0.6.0

[options.packages.find]
where = src
